# PySpecter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pyspectre_verify.py
docs/: API.md  CLI.md  SCANNER.md  advanced.rst  api.rst  conf.py  contributing.rst  index.rst  quickstart.rst  userguide.rst
examples/: __init__.py  example_functions.py
pyspectre/: __init__.py  __main__.py  analyze.py  api.py  ci.py  cli.py  cli_enhanced.py  config.py  logging.py  resources.py  scanner.py  verify_cli.py
pyspectre/analysis/: __init__.py  abstract_domains.py  abstract_interpreter.py  advanced_detectors.py  arithmetic_safety.py  autotuner.py  bounds_checking.py  cache.py  callgraph.py  concolic.py  concurrency.py  contracts.py  cross_function.py  dead_code.py  detectors.py  enhanced_detectors.py  enhanced_scanner.py  exception_analysis.py  flow_sensitive.py  function_models.py  interprocedural.py  invariants.py  loops.py  path_manager.py  pattern_handlers.py  properties.py  range_analysis.py  resource_analysis.py  resource_lifecycle.py  scanner_integration.py  state_merger.py  string_analysis.py  summaries.py  symbolic_engine.py  taint.py  taint_analysis.py  type_constraints.py  type_inference.py  type_stubs.py  z3_engine.py  (+1 more)
pyspectre/benchmarks/: __init__.py  suite.py
pyspectre/contracts/: __init__.py  quantifiers.py
pyspectre/core/: __init__.py  collections.py  exceptions.py  floats.py  iterators.py  memory.py  memory_model.py  object_model.py  oop_support.py  optimization.py  parallel.py  solver.py  state.py  symbolic_types.py  types.py  watch.py
pyspectre/execution/: __init__.py  dispatcher.py  executor.py  verified_executor.py
pyspectre/execution/opcodes/: __init__.py  arithmetic.py  async_ops.py  collections.py  compare.py  control.py  exceptions.py  functions.py  locals.py  stack.py
pyspectre/models/: __init__.py  builtins.py  dicts.py  effects.py  lists.py  objects.py  pathlib_models.py  regex.py  sets.py  stdlib.py  strings.py
pyspectre/plugins/: __init__.py  base.py
pyspectre/reporting/: __init__.py  formatters.py  html_report.py  reproduction.py  sarif.py
pyspectre/testing/: __init__.py  fuzzing.py
